// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiButtonIcon is rendered 1`] = `
<button
  aria-label="aria-label"
  class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props color accent is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--accent ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props color danger is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--danger ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props color ghost is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--ghost ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props color primary is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props color subdued is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--subdued ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props color success is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--success ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props color text is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props color warning is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--warning ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props display base is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props display empty is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props display fill is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--fill ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props href secures the rel attribute when the target is _blank 1`] = `
<a
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</a>
`;

exports[`OuiButtonIcon props iconType is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props isDisabled is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon-isDisabled ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props isDisabled renders a button even when href is defined 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon-isDisabled ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props isSelected is rendered as false 1`] = `
<button
  aria-label="button"
  aria-pressed="false"
  class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props isSelected is rendered as true 1`] = `
<button
  aria-label="button"
  aria-pressed="true"
  class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props size m is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--medium"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props size s is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--small"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;

exports[`OuiButtonIcon props size xs is rendered 1`] = `
<button
  aria-label="button"
  class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--empty ouiButtonIcon--xSmall"
  type="button"
>
  <span
    aria-hidden="true"
    class="ouiButtonIcon__icon"
    color="inherit"
    data-ouiicon-type="user"
  />
</button>
`;
